@@ -60,7 +60,6 @@ import java.util.stream.Collectors;
  * 服务注册，服务发现
  *
  * @author godotg
- * @version 3.0
  */
 public class ZookeeperRegistry implements IRegistry {
     private static final Logger logger = LoggerFactory.getLogger(ZookeeperRegistry.class);
@@ -596,7 +595,7 @@ public class ZookeeperRegistry implements IRegistry {
         try {
             var children = curator.getChildren().forPath(path).stream()
                     .filter(it -> StringUtils.isNotBlank(it) && !"null".equals(it))
-                    .collect(Collectors.toList());
+                    .toList();
             return children;
         } catch (Exception e) {
             logger.error("unknown exception", e);
