@@ -22,14 +22,12 @@ import com.zfoo.protocol.util.AssertionUtils;
 import com.zfoo.protocol.util.StringUtils;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * EN: When generating a protocol, the final generation path of the protocol will use this class.
  * CN: 生成协议的时候，协议的最终生成路径会使用这个类
  *
  * @author godotg
- * @version 3.0
  */
 public abstract class GenerateProtocolPath {
 
@@ -117,7 +115,7 @@ public abstract class GenerateProtocolPath {
 
         for (var i = splits.length; i > 0; i--) {
             builder.append("../");
-            var path = StringUtils.joinWith(StringUtils.PERIOD, Arrays.stream(splits).limit(i).collect(Collectors.toList()).toArray());
+            var path = StringUtils.joinWith(StringUtils.PERIOD, Arrays.stream(splits).limit(i).toList().toArray());
             if (relativePath.startsWith(path)) {
                 builder.append(StringUtils.substringAfterFirst(relativePath, path).replaceAll(StringUtils.PERIOD_REGEX, StringUtils.SLASH));
                 return builder.toString();
@@ -181,7 +179,7 @@ public abstract class GenerateProtocolPath {
         var allChildren = protocolTreeNode.flatTreeNodes()
                 .stream()
                 .filter(it -> it.getData() != null)
-                .collect(Collectors.toList());
+                .toList();
         var pathBefore = StringUtils.substringBeforeLast(protocolTreeNode.fullName(), StringUtils.PERIOD);
         for (var child : allChildren) {
             var protocolSimpleName = child.getData().protocolConstructor().getDeclaringClass().getSimpleName();
