@@ -21,7 +21,7 @@ import com.zfoo.protocol.generate.GenerateProtocolFile;
 import com.zfoo.protocol.registration.field.IFieldRegistration;
 import com.zfoo.protocol.serializer.enhance.*;
 import com.zfoo.protocol.serializer.reflect.*;
-import com.zfoo.protocol.util.ReflectionUtils;
+import com.zfoo.protocol.util.FieldUtils;
 import com.zfoo.protocol.util.StringUtils;
 import io.netty.buffer.ByteBuf;
 import javassist.*;
@@ -30,13 +30,11 @@ import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * 对应于ProtocolRegistration
  *
  * @author godotg
- * @version 3.0
  */
 public abstract class EnhanceUtils {
 
@@ -55,17 +53,17 @@ public abstract class EnhanceUtils {
         var classPool = ClassPool.getDefault();
 
         // 导入需要的包
-        classPool.importPackage(ByteBufUtils.class.getCanonicalName());
-        classPool.importPackage(CollectionUtils.class.getCanonicalName());
-        classPool.importPackage(ArrayUtils.class.getCanonicalName());
-        classPool.importPackage(Iterator.class.getCanonicalName());
-        classPool.importPackage(List.class.getCanonicalName());
-        classPool.importPackage(Map.class.getCanonicalName());
-        classPool.importPackage(Set.class.getCanonicalName());
+        classPool.importPackage(ByteBufUtils.class.getName());
+        classPool.importPackage(CollectionUtils.class.getName());
+        classPool.importPackage(ArrayUtils.class.getName());
+        classPool.importPackage(Iterator.class.getName());
+        classPool.importPackage(List.class.getName());
+        classPool.importPackage(Map.class.getName());
+        classPool.importPackage(Set.class.getName());
 
         // 增加类的路径
         for (var clazz : classArray) {
-            if (classPool.find(clazz.getCanonicalName()) == null) {
+            if (classPool.find(clazz.getName()) == null) {
                 ClassClassPath classPath = new ClassClassPath(clazz);
                 classPool.insertClassPath(classPath);
             }
@@ -78,7 +76,6 @@ public abstract class EnhanceUtils {
         tempEnhanceSerializerMap.put(LongSerializer.INSTANCE, new EnhanceLongSerializer());
         tempEnhanceSerializerMap.put(FloatSerializer.INSTANCE, new EnhanceFloatSerializer());
         tempEnhanceSerializerMap.put(DoubleSerializer.INSTANCE, new EnhanceDoubleSerializer());
-        tempEnhanceSerializerMap.put(CharSerializer.INSTANCE, new EnhanceCharSerializer());
         tempEnhanceSerializerMap.put(StringSerializer.INSTANCE, new EnhanceStringSerializer());
         tempEnhanceSerializerMap.put(ObjectProtocolSerializer.INSTANCE, new EnhanceObjectProtocolSerializer());
         tempEnhanceSerializerMap.put(ListSerializer.INSTANCE, new EnhanceListSerializer());
@@ -114,11 +111,11 @@ public abstract class EnhanceUtils {
         var packetFields = registration.getFieldRegistrations();
 
         // 定义类名称
-        CtClass enhanceClazz = classPool.makeClass(ProtocolRegistration.class.getCanonicalName() + protocolId);
-        enhanceClazz.addInterface(classPool.get(IProtocolRegistration.class.getCanonicalName()));
+        CtClass enhanceClazz = classPool.makeClass(ProtocolRegistration.class.getName() + protocolId);
+        enhanceClazz.addInterface(classPool.get(IProtocolRegistration.class.getName()));
 
         // 定义类中的一个成员
-        CtField constructorFiled = new CtField(classPool.get(Constructor.class.getCanonicalName()), "constructor", enhanceClazz);
+        CtField constructorFiled = new CtField(classPool.get(Constructor.class.getName()), "constructor", enhanceClazz);
         constructorFiled.setModifiers(Modifier.PRIVATE);
         enhanceClazz.addField(constructorFiled);
 
@@ -127,42 +124,42 @@ public abstract class EnhanceUtils {
         var allSubProtocolIds = ProtocolAnalysis.getAllSubProtocolIds(protocolId)
                 .stream()
                 .sorted((a, b) -> Short.compare(a, b))
-                .collect(Collectors.toList());
+                .toList();
 
         for (var subProtocolId : allSubProtocolIds) {
-            var protocolRegistrationField = new CtField(classPool.get(IProtocolRegistration.class.getCanonicalName()), getProtocolRegistrationFieldNameByProtocolId(subProtocolId), enhanceClazz);
+            var protocolRegistrationField = new CtField(classPool.get(IProtocolRegistration.class.getName()), getProtocolRegistrationFieldNameByProtocolId(subProtocolId), enhanceClazz);
             protocolRegistrationField.setModifiers(Modifier.PRIVATE);
             enhanceClazz.addField(protocolRegistrationField);
         }
 
         // 定义类的构造器
-        CtConstructor constructor = new CtConstructor(classPool.get(new String[]{Constructor.class.getCanonicalName()}), enhanceClazz);
+        CtConstructor constructor = new CtConstructor(classPool.get(new String[]{Constructor.class.getName()}), enhanceClazz);
         constructor.setBody("{this.constructor=$1;}");
         constructor.setModifiers(Modifier.PUBLIC);
         enhanceClazz.addConstructor(constructor);
 
         // 定义类实现的接口方法
-        CtMethod protocolIdMethod = new CtMethod(classPool.get(short.class.getCanonicalName()), "protocolId", null, enhanceClazz);
+        CtMethod protocolIdMethod = new CtMethod(classPool.get(short.class.getName()), "protocolId", null, enhanceClazz);
         protocolIdMethod.setModifiers(Modifier.PUBLIC + Modifier.FINAL);
         protocolIdMethod.setBody("{return " + registration.protocolId() + ";}");
         enhanceClazz.addMethod(protocolIdMethod);
 
-        CtMethod protocolConstructorMethod = new CtMethod(classPool.get(Constructor.class.getCanonicalName()), "protocolConstructor", null, enhanceClazz);
+        CtMethod protocolConstructorMethod = new CtMethod(classPool.get(Constructor.class.getName()), "protocolConstructor", null, enhanceClazz);
         protocolConstructorMethod.setModifiers(Modifier.PUBLIC + Modifier.FINAL);
         protocolConstructorMethod.setBody("{return this.constructor;}");
         enhanceClazz.addMethod(protocolConstructorMethod);
 
-        CtMethod moduleMethod = new CtMethod(classPool.get(byte.class.getCanonicalName()), "module", null, enhanceClazz);
+        CtMethod moduleMethod = new CtMethod(classPool.get(byte.class.getName()), "module", null, enhanceClazz);
         moduleMethod.setModifiers(Modifier.PUBLIC + Modifier.FINAL);
         moduleMethod.setBody("{return " + registration.module() + ";}");
         enhanceClazz.addMethod(moduleMethod);
 
-        CtMethod writeMethod = new CtMethod(classPool.get(void.class.getCanonicalName()), "write", classPool.get(new String[]{ByteBuf.class.getCanonicalName(), Object.class.getCanonicalName()}), enhanceClazz);
+        CtMethod writeMethod = new CtMethod(classPool.get(void.class.getName()), "write", classPool.get(new String[]{ByteBuf.class.getName(), Object.class.getName()}), enhanceClazz);
         writeMethod.setModifiers(Modifier.PUBLIC + Modifier.FINAL);
         writeMethod.setBody(writeMethodBody(registration));
         enhanceClazz.addMethod(writeMethod);
 
-        CtMethod readMethod = new CtMethod(classPool.get(Object.class.getCanonicalName()), "read", classPool.get(new String[]{ByteBuf.class.getCanonicalName()}), enhanceClazz);
+        CtMethod readMethod = new CtMethod(classPool.get(Object.class.getName()), "read", classPool.get(new String[]{ByteBuf.class.getName()}), enhanceClazz);
         readMethod.setModifiers(Modifier.PUBLIC + Modifier.FINAL);
         readMethod.setBody(readMethodBody(registration));
         enhanceClazz.addMethod(readMethod);
@@ -185,8 +182,15 @@ public abstract class EnhanceUtils {
         var packetClazz = constructor.getDeclaringClass();
 
         var builder = new StringBuilder();
-        builder.append("{").append(packetClazz.getCanonicalName() + " packet = (" + packetClazz.getCanonicalName() + ")$2;");
-        builder.append("if(ByteBufUtils.writePacketFlag($1, packet)){").append("return;}");
+        builder.append("{");
+        builder.append("if ($2 == null) { $1.writeByte(0); return; }");
+        builder.append(StringUtils.format("{} packet = ({})$2;", packetClazz.getName(), packetClazz.getName()));
+        if (registration.isCompatible()) {
+            builder.append("int beforeWriteIndex = $1.writerIndex();");
+            builder.append(StringUtils.format("{}.writeInt($1, {});", byteBufUtils, registration.getPredictionLength()));
+        } else {
+            builder.append("$1.writeByte(1);");
+        }
         for (var i = 0; i < fields.length; i++) {
             var field = fields[i];
             var fieldRegistration = fieldRegistrations[i];
@@ -196,8 +200,11 @@ public abstract class EnhanceUtils {
                         .writeObject(builder, StringUtils.format("packet.{}", field.getName()), field, fieldRegistration);
             } else {
                 enhanceSerializer(fieldRegistration.serializer())
-                        .writeObject(builder, StringUtils.format("packet.{}()", ReflectionUtils.fieldToGetMethod(packetClazz, field)), field, fieldRegistration);
+                        .writeObject(builder, StringUtils.format("packet.{}()", FieldUtils.fieldToGetMethod(packetClazz, field)), field, fieldRegistration);
             }
+        }
+        if (registration.isCompatible()) {
+            builder.append(StringUtils.format("{}.adjustPadding($1, {}, beforeWriteIndex);", byteBufUtils, registration.getPredictionLength()));
         }
         builder.append("}");
         return builder.toString();
@@ -206,30 +213,74 @@ public abstract class EnhanceUtils {
     // see: ProtocolRegistration.read()
     private static String readMethodBody(ProtocolRegistration registration) {
         var constructor = registration.getConstructor();
-        var fields = registration.getFields();
         var fieldRegistrations = registration.getFieldRegistrations();
 
         var builder = new StringBuilder();
-        builder.append("{").append("if(!" + EnhanceUtils.byteBufUtilsReadBoolean + "){").append("return null;}");
+        builder.append("{");
+        builder.append(StringUtils.format("int length = {}.readInt($1);", byteBufUtils));
+        builder.append("if(length==0){return null;}");
+        builder.append("int beforeReadIndex = $1.readerIndex();");
         var packetClazz = constructor.getDeclaringClass();
-        builder.append(packetClazz.getCanonicalName() + " packet=new " + packetClazz.getCanonicalName() + "();");
+        if (packetClazz.isRecord()) {
+            var fields = registration.getFields();
+            var originFields = ProtocolAnalysis.getFields(packetClazz);
+            var constructorParams = new String[originFields.size()];
 
-        for (var i = 0; i < fields.length; i++) {
-            var field = fields[i];
-            var fieldRegistration = fieldRegistrations[i];
-            // protocol backwards compatibility，协议向后兼容
-            if (field.isAnnotationPresent(Compatible.class)) {
-                builder.append("if(!$1.isReadable()){ return packet; }");
+            for (var i = 0; i < fields.length; i++) {
+                var field = fields[i];
+                var fieldRegistration = fieldRegistrations[i];
+                int index = originFields.indexOf(field);
+                // protocol backwards compatibility，协议向后兼容
+                if (field.isAnnotationPresent(Compatible.class)) {
+                    var defaultReadObject = enhanceSerializer(fieldRegistration.serializer()).defaultValue(builder, field, fieldRegistration);
+                    builder.append(StringUtils.format("if ({}.compatibleRead($1, beforeReadIndex, length)) {", byteBufUtils));
+                    var compatibleReadObject = enhanceSerializer(fieldRegistration.serializer()).readObject(builder, field, fieldRegistration);
+                    builder.append(StringUtils.format("{} = {};", defaultReadObject, compatibleReadObject));
+                    builder.append("}");
+                    constructorParams[index] = defaultReadObject;
+                    continue;
+                }
+
+                var readObject = enhanceSerializer(fieldRegistration.serializer()).readObject(builder, field, fieldRegistration);
+                constructorParams[index] = readObject;
             }
+            builder.append(packetClazz.getName() + " packet=new " + packetClazz.getName() + "(" + String.join(StringUtils.COMMA, constructorParams) + ");");
+        } else {
+            var fields = registration.getFields();
+            builder.append(packetClazz.getName() + " packet=new " + packetClazz.getName() + "();");
 
-            var readObject = enhanceSerializer(fieldRegistration.serializer()).readObject(builder, field, fieldRegistration);
-
-            if (Modifier.isPublic(field.getModifiers())) {
-                builder.append(StringUtils.format("packet.{}={};", field.getName(), readObject));
-            } else {
-                builder.append(StringUtils.format("packet.{}({});", ReflectionUtils.fieldToSetMethod(packetClazz, field), readObject));
+            for (var i = 0; i < fields.length; i++) {
+                var field = fields[i];
+                var fieldRegistration = fieldRegistrations[i];
+                // protocol backwards compatibility，协议向后兼容
+                if (field.isAnnotationPresent(Compatible.class)) {
+                    builder.append(StringUtils.format("if ({}.compatibleRead($1, beforeReadIndex, length)) {", byteBufUtils));
+                    var compatibleReadObject = enhanceSerializer(fieldRegistration.serializer()).readObject(builder, field, fieldRegistration);
+                    if (Modifier.isPublic(field.getModifiers())) {
+                        builder.append(StringUtils.format("packet.{}={};", field.getName(), compatibleReadObject));
+                    } else {
+                        builder.append(StringUtils.format("packet.{}({});", FieldUtils.fieldToSetMethod(packetClazz, field), compatibleReadObject));
+                    }
+                    builder.append("} else {");
+                    var defaultReadObject = enhanceSerializer(fieldRegistration.serializer()).defaultValue(builder, field, fieldRegistration);
+                    if (Modifier.isPublic(field.getModifiers())) {
+                        builder.append(StringUtils.format("packet.{}={};", field.getName(), defaultReadObject));
+                    } else {
+                        builder.append(StringUtils.format("packet.{}({});", FieldUtils.fieldToSetMethod(packetClazz, field), defaultReadObject));
+                    }
+                    builder.append("}");
+                    continue;
+                }
+                var readObject = enhanceSerializer(fieldRegistration.serializer()).readObject(builder, field, fieldRegistration);
+                if (Modifier.isPublic(field.getModifiers())) {
+                    builder.append(StringUtils.format("packet.{}={};", field.getName(), readObject));
+                } else {
+                    builder.append(StringUtils.format("packet.{}({});", FieldUtils.fieldToSetMethod(packetClazz, field), readObject));
+                }
             }
         }
+
+        builder.append("if (length > 0) { $1.readerIndex(beforeReadIndex + length); }");
 
         builder.append("return packet;}");
         return builder.toString();
